Change some codes to accommodate with java 17